feat: Confirm save changes on cancel edit timer

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -13,7 +13,7 @@
   "issues.context-menu.open-in-redmine": "In Redmine öffnen",
   "issues.context-menu.timer.start": "Timer starten",
   "issues.context-menu.timer.pause": "Timer pausieren",
-  "issues.context-menu.timer.stop": "Timer stoppen",
+  "issues.context-menu.timer.stop": "Timer beenden",
   "issues.context-menu.timer.edit": "Timer bearbeiten",
   "issues.context-menu.pin": "Ticket anheften",
   "issues.context-menu.unpin": "Ticket lösen",
@@ -25,7 +25,7 @@
   "issues.timer.action.edit.tooltip": "Doppelklicken zum Bearbeiten",
   "issues.timer.action.start.tooltip": "Klicken, um Timer zu starten",
   "issues.timer.action.pause.tooltip": "Klicken, um Timer zu pausieren",
-  "issues.timer.action.stop.tooltip": "Klicken, um Timer zu stoppen",
+  "issues.timer.action.stop.tooltip": "Klicken, um Timer zu beenden",
   "issues.timer.action.add-spent-time.tooltip": "Klicken, um Zeitaufwand hinzuzufügen",
   "issues.info-tooltip.status": "Status",
   "issues.info-tooltip.priority": "Priorität",
@@ -43,6 +43,10 @@
   "issues.modal.add-spent-time.activity": "Aktivität ",
   "issues.modal.add-spent-time.activity.validation.required": "Aktivität wird benötigt",
   "issues.modal.add-spent-time.submit": "Erstellen",
+  "issues.modal.save-changes.title": "Änderung speichern?",
+  "issues.modal.save-changes.message": "Möchten Sie Ihre Änderungen speichern?",
+  "issues.modal.save-changes.cancel": "Nein, abbrechen",
+  "issues.modal.save-changes.save": "Ja, speichern",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
   "time.error.fail-to-load-data": "Fehler beim Laden der Daten",
