--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -39,6 +39,7 @@
   "issues.modal.add-spent-time.hours": "Stunden",
   "issues.modal.add-spent-time.hours.validation.required": "Stunden wird benötigt",
   "issues.modal.add-spent-time.hours.validation.greater-than-zero": "Muss größer als 0 sein",
+  "issues.modal.add-spent-time.hours.validation.less-than-24": "Muss weniger als ein Tag sein",
   "issues.modal.add-spent-time.comments": "Kommentar",
   "issues.modal.add-spent-time.activity": "Aktivität ",
   "issues.modal.add-spent-time.activity.validation.required": "Aktivität wird benötigt",
