--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -19,6 +19,7 @@
   "issues.context-menu.unpin": "Ticket lösen",
   "issues.context-menu.remember": "Ticket merken",
   "issues.context-menu.forgot": "Ticket vergessen",
+  "issues.context-menu.pin-and-remember": "Ticket anheften und merken",
   "issues.issue.pinned": "Ticket is oben angeheftet",
   "issues.issue.not-assigned-to-me": "Ticket ist Ihnen nicht zugewiesen",
   "issues.action.toggle-timer.tooltip": "Wenn ausgewählt, <KBD>Strg</KBD> + <KBD>Leertaste</KBD> drücken, um Timer umzuschalten",
