feat: Added issues filter
- Added issues filter
- Added react select component
- Removed search mode
- Moved issues sorting and grouping into utils

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -5,10 +5,13 @@
   "nav.error.page-not-found": "Seite nicht gefunden!",
 
   "issues.search": "Suchen...",
-  "issues.search.mode.issue": "Ticket",
-  "issues.search.mode.project": "Projekt",
   "issues.search.search-in-project": "In <badge>{projectName}</badge> suchen",
   "issues.extended-search": "Erweiterte Suche",
+  "issues.filter": "Filter",
+  "issues.filter.projects": "Projekte",
+  "issues.filter.projects.no-projects": "Keine projekte",
+  "issues.filter.hide-completed-issues.title": "Verstecke fertige Tickets",
+  "issues.filter.hide-completed-issues.description": "100% erledigt, aber weiterhin offen",
   "issues.list.no-issues": "Keine Tickets",
   "issues.context-menu.open-in-redmine": "In Redmine öffnen",
   "issues.context-menu.timer.start": "Timer starten",
