--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -5,10 +5,13 @@
   "nav.error.page-not-found": "Page not found!",
 
   "issues.search": "Search...",
-  "issues.search.mode.issue": "Issue",
-  "issues.search.mode.project": "Project",
   "issues.search.search-in-project": "Search in <badge>{projectName}</badge>",
   "issues.extended-search": "Extended search",
+  "issues.filter": "Filter",
+  "issues.filter.projects": "Projects",
+  "issues.filter.projects.no-projects": "No projects",
+  "issues.filter.hide-completed-issues.title": "Hide completed issues",
+  "issues.filter.hide-completed-issues.description": "100% done, but still open",
   "issues.list.no-issues": "No issues",
   "issues.context-menu.open-in-redmine": "Open in Redmine",
   "issues.context-menu.timer.start": "Start timer",
