--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -44,6 +44,8 @@
   "issues.modal.add-spent-time.hours.validation.required": "Hours is required",
   "issues.modal.add-spent-time.hours.validation.greater-than-zero": "Must be greater than 0",
   "issues.modal.add-spent-time.hours.validation.less-than-24": "Must be less than one day",
+  "issues.modal.add-spent-time.user": "User",
+  "issues.modal.add-spent-time.user.me": "me",
   "issues.modal.add-spent-time.comments": "Comments",
   "issues.modal.add-spent-time.activity": "Activity",
   "issues.modal.add-spent-time.activity.validation.required": "Activity is required",
@@ -79,6 +81,8 @@
   "settings.options.extended-search.description": "Allows to search issues that are not assigned to you",
   "settings.options.round-time-nearest-quarter-hour.title": "Round to nearest 15 min",
   "settings.options.round-time-nearest-quarter-hour.description": "Round timer to nearest quarter hour",
+  "settings.options.add-spent-time-for-other-users.title": "Add spent time for other users",
+  "settings.options.add-spent-time-for-other-users.description": "(Redmine permission required)",
   "settings.save-settings": "Save settings",
   "settings.settings-saved": "Settings saved!"
 }
