--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -60,8 +60,9 @@
 
   "settings.general": "General",
   "settings.general.language": "Language",
-  "settings.general.language.de": "German",
   "settings.general.language.en": "English",
+  "settings.general.language.de": "German",
+  "settings.general.language.ru": "Russian",
   "settings.general.language.missing-hint": "Missing your language?",
   "settings.redmine": "Redmine",
   "settings.redmine.url": "Redmine URL",
