feat: Improved intl support
- Improved number rounding (#5)
- Format numbers in the correct language
- Set local for flatpickr
- Extended Russian translation (#6)
- Improved stylings
- Fixed crash

--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -86,7 +86,7 @@
   "settings.options.add-spent-time-for-other-users.description": "(Требуются разрешения в Redmine)",
   "settings.save-settings": "Сохранить настройки",
   "settings.settings-saved": "Настройки сохранены!",
-  "settings.info.version": "Version: {version}",
+  "settings.info.version": "Версия: {version}",
 
-  "format.hours": "{hours} h"
+  "format.hours": "{hours} ч"
 }
