--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -46,6 +46,7 @@
   "issues.modal.add-spent-time.hours.validation.less-than-24": "Muss weniger als ein Tag sein",
   "issues.modal.add-spent-time.user": "Benutzer",
   "issues.modal.add-spent-time.user.me": "ich",
+  "issues.modal.add-spent-time.user.no-users": "Keine Benutzer",
   "issues.modal.add-spent-time.comments": "Kommentar",
   "issues.modal.add-spent-time.activity": "Aktivität ",
   "issues.modal.add-spent-time.activity.validation.required": "Aktivität wird benötigt",
