--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -46,6 +46,7 @@
   "issues.modal.add-spent-time.hours.validation.less-than-24": "Must be less than one day",
   "issues.modal.add-spent-time.user": "User",
   "issues.modal.add-spent-time.user.me": "me",
+  "issues.modal.add-spent-time.user.no-users": "No users",
   "issues.modal.add-spent-time.comments": "Comments",
   "issues.modal.add-spent-time.activity": "Activity",
   "issues.modal.add-spent-time.activity.validation.required": "Activity is required",
