--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -85,6 +85,8 @@
   "settings.options.round-time-nearest-quarter-hour.description": "Round timer to nearest quarter hour",
   "settings.options.add-spent-time-for-other-users.title": "Add spent time for other users",
   "settings.options.add-spent-time-for-other-users.description": "(Redmine permission required)",
+  "settings.options.cache-comments.title": "Cache comments",
+  "settings.options.cache-comments.description": "Cache comments until they are submitted",
   "settings.save-settings": "Save settings",
   "settings.settings-saved": "Settings saved!",
   "settings.info.version": "Version: {version}",
