--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -85,6 +85,8 @@
   "settings.options.round-time-nearest-quarter-hour.description": "Округлять таймер до ближайших 15 минут",
   "settings.options.add-spent-time-for-other-users.title": "Добавлять затраченное время для других пользователей",
   "settings.options.add-spent-time-for-other-users.description": "(Требуются разрешения в Redmine)",
+  "settings.options.cache-comments.title": "Cache comments",
+  "settings.options.cache-comments.description": "Cache comments until they are submitted",
   "settings.save-settings": "Сохранить настройки",
   "settings.settings-saved": "Настройки сохранены!",
   "settings.info.version": "Версия: {version}",
