refactor: general improvements
- added search hint
- type improvements
- added Fieldset component
- improved input components
- other improvements

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -4,7 +4,7 @@
   "nav.tabs.settings": "Einstellungen",
   "nav.error.page-not-found": "Seite nicht gefunden!",
 
-  "issues.search": "Suchen...",
+  "issues.search": "Suchen... (#123, Thema, ...)",
   "issues.search.search-in-project": "In <badge>{projectName}</badge> suchen",
   "issues.extended-search": "Erweiterte Suche",
   "issues.filter": "Filter",
