feat: Adding notes to an issue

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -50,6 +50,8 @@
   "issues.modal.add-spent-time.comments": "Kommentar",
   "issues.modal.add-spent-time.activity": "Aktivität ",
   "issues.modal.add-spent-time.activity.validation.required": "Aktivität wird benötigt",
+  "issues.modal.add-spent-time.add-notes": "Notizen hinzufügen",
+  "issues.modal.add-spent-time.notes": "Notizen",
   "issues.modal.add-spent-time.submit": "Erstellen",
   "issues.modal.save-changes.title": "Änderung speichern?",
   "issues.modal.save-changes.message": "Möchten Sie Ihre Änderungen speichern?",
@@ -86,6 +88,8 @@
   "settings.options.round-time-nearest-quarter-hour.description": "Timer auf nächsten Viertelstunde runden",
   "settings.options.add-spent-time-for-other-users.title": "Zeitaufwand für andere Nutzer hinzufügen",
   "settings.options.add-spent-time-for-other-users.description": "(Redmine-Berechtigung benötigt)",
+  "settings.options.add-notes.title": "Notizen hinzufügen",
+  "settings.options.add-notes.description": "Notizen zu Ticket hinzufügen",
   "settings.options.cache-comments.title": "Kommentare zwischenspeichern",
   "settings.options.cache-comments.description": "Kommentare zwischenspeichern, bis sie übermittelt wurden",
   "settings.save-settings": "Einstellungen speichern",
