--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,6 +50,8 @@
   "issues.modal.add-spent-time.comments": "Comments",
   "issues.modal.add-spent-time.activity": "Activity",
   "issues.modal.add-spent-time.activity.validation.required": "Activity is required",
+  "issues.modal.add-spent-time.add-notes": "Add notes",
+  "issues.modal.add-spent-time.notes": "Notes",
   "issues.modal.add-spent-time.submit": "Create",
   "issues.modal.save-changes.title": "Save changes?",
   "issues.modal.save-changes.message": "Do you want to save your changes?",
@@ -86,6 +88,8 @@
   "settings.options.round-time-nearest-quarter-hour.description": "Round timer to nearest quarter hour",
   "settings.options.add-spent-time-for-other-users.title": "Add spent time for other users",
   "settings.options.add-spent-time-for-other-users.description": "(Redmine permission required)",
+  "settings.options.add-notes.title": "Add notes",
+  "settings.options.add-notes.description": "Adding notes to an issue",
   "settings.options.cache-comments.title": "Cache comments",
   "settings.options.cache-comments.description": "Cache comments until they are submitted",
   "settings.save-settings": "Save settings",
