--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -50,6 +50,8 @@
   "issues.modal.add-spent-time.comments": "Комментарий",
   "issues.modal.add-spent-time.activity": "Деятельность",
   "issues.modal.add-spent-time.activity.validation.required": "Требуется хотя бы одно созданное действие в «Списки значений»",
+  "issues.modal.add-spent-time.add-notes": "Add notes",
+  "issues.modal.add-spent-time.notes": "Notes",
   "issues.modal.add-spent-time.submit": "Добавить",
   "issues.modal.save-changes.title": "Сохранение изменений",
   "issues.modal.save-changes.message": "Вы хотите сохранить ваши изменения?",
@@ -86,6 +88,8 @@
   "settings.options.round-time-nearest-quarter-hour.description": "Округлять таймер до ближайших 15 минут",
   "settings.options.add-spent-time-for-other-users.title": "Добавлять затраченное время для других пользователей",
   "settings.options.add-spent-time-for-other-users.description": "(Требуются разрешения в Redmine)",
+  "settings.options.add-notes.title": "Add notes",
+  "settings.options.add-notes.description": "Adding notes to an issue",
   "settings.options.cache-comments.title": "Cache comments",
   "settings.options.cache-comments.description": "Cache comments until they are submitted",
   "settings.save-settings": "Сохранить настройки",
