feat: Group issues by target version
- Group issues by target version
- Improved issue info tooltip
- Fixed issue sorting

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -31,12 +31,19 @@
   "issues.timer.action.pause.tooltip": "Klicken, um Timer zu pausieren",
   "issues.timer.action.stop.tooltip": "Klicken, um Timer zu beenden",
   "issues.timer.action.add-spent-time.tooltip": "Klicken, um Zeitaufwand hinzuzufügen",
-  "issues.info-tooltip.status": "Status",
-  "issues.info-tooltip.priority": "Priorität",
-  "issues.info-tooltip.assignee": "Zugewiesen an",
-  "issues.info-tooltip.estimated-time": "Geschätzter Aufwand",
-  "issues.info-tooltip.spent-time": "Aufgewendete Zeit",
-  "issues.info-tooltip.open-in-redmine": "Klicken um Ticket zu öffnen",
+  "issues.issue-tooltip.status": "Status",
+  "issues.issue-tooltip.priority": "Priorität",
+  "issues.issue-tooltip.assignee": "Zugewiesen an",
+  "issues.issue-tooltip.version": "Zielversion",
+  "issues.issue-tooltip.start-date": "Beginn",
+  "issues.issue-tooltip.due-date": "Abgabedatum",
+  "issues.issue-tooltip.estimated-time": "Geschätzter Aufwand",
+  "issues.issue-tooltip.spent-time": "Aufgewendete Zeit",
+  "issues.issue-tooltip.open-in-redmine": "Klicken um Ticket zu öffnen",
+  "issues.version-tooltip.status": "Status",
+  "issues.version-tooltip.due-date": "Fälligkeitsdatum",
+  "issues.version-tooltip.open-in-redmine": "Klicken um Zielversion zu öffnen",
+  "issues.version.no-version": "(ohne Zielversion)",
   "issues.modal.add-spent-time.title": "Zeitaufwand hinzuzufügen",
   "issues.modal.add-spent-time.date": "Datum",
   "issues.modal.add-spent-time.date.validation.in-future": "Kann nicht in der Zukunft liegen",
@@ -92,6 +99,8 @@
   "settings.options.add-notes.description": "Notizen zu Ticket hinzufügen",
   "settings.options.cache-comments.title": "Kommentare zwischenspeichern",
   "settings.options.cache-comments.description": "Kommentare zwischenspeichern, bis sie übermittelt wurden",
+  "settings.style": "Styling",
+  "settings.style.group-issues-by-version.title": "Tickets nach Zielversion gruppieren",
   "settings.save-settings": "Einstellungen speichern",
   "settings.settings-saved": "Einstellungen gespeichert!",
   "settings.info.version": "Version: {version}",
