--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -31,12 +31,19 @@
   "issues.timer.action.pause.tooltip": "Click to pause timer",
   "issues.timer.action.stop.tooltip": "Click to stop timer",
   "issues.timer.action.add-spent-time.tooltip": "Click to add spent time",
-  "issues.info-tooltip.status": "Status",
-  "issues.info-tooltip.priority": "Priority",
-  "issues.info-tooltip.assignee": "Assignee",
-  "issues.info-tooltip.estimated-time": "Estimated time",
-  "issues.info-tooltip.spent-time": "Spent time",
-  "issues.info-tooltip.open-in-redmine": "Click to open issue",
+  "issues.issue-tooltip.status": "Status",
+  "issues.issue-tooltip.priority": "Priority",
+  "issues.issue-tooltip.assignee": "Assignee",
+  "issues.issue-tooltip.version": "Target version",
+  "issues.issue-tooltip.start-date": "Start date",
+  "issues.issue-tooltip.due-date": "Due date",
+  "issues.issue-tooltip.estimated-time": "Estimated time",
+  "issues.issue-tooltip.spent-time": "Spent time",
+  "issues.issue-tooltip.open-in-redmine": "Click to open issue",
+  "issues.version-tooltip.status": "Status",
+  "issues.version-tooltip.due-date": "Due date",
+  "issues.version-tooltip.open-in-redmine": "Click to open target version",
+  "issues.version.no-version": "(without version)",
   "issues.modal.add-spent-time.title": "Add spent time",
   "issues.modal.add-spent-time.date": "Date",
   "issues.modal.add-spent-time.date.validation.in-future": "Cannot be in the future",
@@ -92,6 +99,8 @@
   "settings.options.add-notes.description": "Adding notes to an issue",
   "settings.options.cache-comments.title": "Cache comments",
   "settings.options.cache-comments.description": "Cache comments until they are submitted",
+  "settings.style": "Styling",
+  "settings.style.group-issues-by-version.title": "Group issues by target version",
   "settings.save-settings": "Save settings",
   "settings.settings-saved": "Settings saved!",
   "settings.info.version": "Version: {version}",
