--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -31,12 +31,19 @@
   "issues.timer.action.pause.tooltip": "Нажмите для остановки таймера",
   "issues.timer.action.stop.tooltip": "Нажмите для сброса таймера",
   "issues.timer.action.add-spent-time.tooltip": "Нажмите для добавления затраченного времени",
-  "issues.info-tooltip.status": "Статус",
-  "issues.info-tooltip.priority": "Приоритет",
-  "issues.info-tooltip.assignee": "Назначена",
-  "issues.info-tooltip.estimated-time": "Оценка временных затрат",
-  "issues.info-tooltip.spent-time": "Трудозатраты",
-  "issues.info-tooltip.open-in-redmine": "Нажмите, чтобы открыть задачу",
+  "issues.issue-tooltip.status": "Статус",
+  "issues.issue-tooltip.priority": "Приоритет",
+  "issues.issue-tooltip.assignee": "Назначена",
+  "issues.issue-tooltip.version": "Target version",
+  "issues.issue-tooltip.start-date": "Start date",
+  "issues.issue-tooltip.due-date": "Due date",
+  "issues.issue-tooltip.estimated-time": "Оценка временных затрат",
+  "issues.issue-tooltip.spent-time": "Трудозатраты",
+  "issues.issue-tooltip.open-in-redmine": "Нажмите, чтобы открыть задачу",
+  "issues.version-tooltip.status": "Статус",
+  "issues.version-tooltip.due-date": "Due date",
+  "issues.version-tooltip.open-in-redmine": "Click to open target version",
+  "issues.version.no-version": "(without version)",
   "issues.modal.add-spent-time.title": "Добавление затраченного времени",
   "issues.modal.add-spent-time.date": "Дата",
   "issues.modal.add-spent-time.date.validation.in-future": "Не может быть позже текущей даты",
@@ -92,6 +99,8 @@
   "settings.options.add-notes.description": "Adding notes to an issue",
   "settings.options.cache-comments.title": "Cache comments",
   "settings.options.cache-comments.description": "Cache comments until they are submitted",
+  "settings.style": "Styling",
+  "settings.style.group-issues-by-version.title": "Group issues by target version",
   "settings.save-settings": "Сохранить настройки",
   "settings.settings-saved": "Настройки сохранены!",
   "settings.info.version": "Версия: {version}",
