feat: Added styling settings
- Show issues priority
- Sort issues by priority
- Show tooltips
- Renamed options to features
- Improved time entry tooltip
- Sort issues by due date

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -9,7 +9,7 @@
   "issues.extended-search": "Erweiterte Suche",
   "issues.filter": "Filter",
   "issues.filter.projects": "Projekte",
-  "issues.filter.projects.no-projects": "Keine projekte",
+  "issues.filter.projects.no-projects": "Keine Projekte",
   "issues.filter.hide-completed-issues.title": "Verstecke fertige Tickets",
   "issues.filter.hide-completed-issues.description": "100% erledigt, aber weiterhin offen",
   "issues.list.no-issues": "Keine Tickets",
@@ -66,6 +66,10 @@
   "issues.modal.save-changes.save": "Ja, speichern",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
+  "time.entry-tooltip.project": "Projekt",
+  "time.entry-tooltip.issue": "Ticket",
+  "time.entry-tooltip.activity": "Aktivität",
+  "time.entry-tooltip.hours": "Stunden",
   "time.error.fail-to-load-data": "Fehler beim Laden der Daten",
 
   "settings.general": "Allgemein",
@@ -86,21 +90,24 @@
   "settings.redmine.connection-successful": "Verbindung erfolgreich!",
   "settings.redmine.hello-user": "Hallo <strong>{firstName} {lastName}</strong> ({accountName})",
   "settings.redmine.edit": "Bearbeiten",
-  "settings.options": "Optionen",
-  "settings.options.auto-pause-on-switch.title": "Auto Pause",
-  "settings.options.auto-pause-on-switch.description": "Timer automatisch pausieren, wenn Ticket gewechselt wird",
-  "settings.options.extended-search.title": "Erweiterte Suche",
-  "settings.options.extended-search.description": "Erlaubt Tickets zu suchen, die Ihnen nicht zugewiesen sind",
-  "settings.options.round-time-nearest-quarter-hour.title": "Zu nächsten 15 min runden",
-  "settings.options.round-time-nearest-quarter-hour.description": "Timer auf nächsten Viertelstunde runden",
-  "settings.options.add-spent-time-for-other-users.title": "Zeitaufwand für andere Nutzer hinzufügen",
-  "settings.options.add-spent-time-for-other-users.description": "(Redmine-Berechtigung benötigt)",
-  "settings.options.add-notes.title": "Notizen hinzufügen",
-  "settings.options.add-notes.description": "Notizen zu Ticket hinzufügen",
-  "settings.options.cache-comments.title": "Kommentare zwischenspeichern",
-  "settings.options.cache-comments.description": "Kommentare zwischenspeichern, bis sie übermittelt wurden",
+  "settings.features": "Funktionen",
+  "settings.features.auto-pause-on-switch.title": "Auto Pause",
+  "settings.features.auto-pause-on-switch.description": "Timer automatisch pausieren, wenn Ticket gewechselt wird",
+  "settings.features.extended-search.title": "Erweiterte Suche",
+  "settings.features.extended-search.description": "Erlaubt Tickets zu suchen, die Ihnen nicht zugewiesen sind",
+  "settings.features.round-time-nearest-quarter-hour.title": "Zu nächsten 15 min runden",
+  "settings.features.round-time-nearest-quarter-hour.description": "Timer auf nächsten Viertelstunde runden",
+  "settings.features.add-spent-time-for-other-users.title": "Zeitaufwand für andere Nutzer hinzufügen",
+  "settings.features.add-spent-time-for-other-users.description": "(Redmine-Berechtigung benötigt)",
+  "settings.features.add-notes.title": "Notizen hinzufügen",
+  "settings.features.add-notes.description": "Notizen zu Ticket hinzufügen",
+  "settings.features.cache-comments.title": "Kommentare zwischenspeichern",
+  "settings.features.cache-comments.description": "Kommentare zwischenspeichern, bis sie übermittelt wurden",
   "settings.style": "Styling",
   "settings.style.group-issues-by-version.title": "Tickets nach Zielversion gruppieren",
+  "settings.style.show-issues-priority.title": "Tickets Priorität anzeigen",
+  "settings.style.sort-issues-by-priority.title": "Tickets nach Priorität sortieren",
+  "settings.style.show-tooltips.title": "Tooltips anzeigen",
   "settings.save-settings": "Einstellungen speichern",
   "settings.settings-saved": "Einstellungen gespeichert!",
   "settings.info.version": "Version: {version}",
