--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -66,6 +66,10 @@
   "issues.modal.save-changes.save": "Да, сохранить",
   "issues.error.fail-to-load-issues": "Не удалось загрузить задачи",
 
+  "time.entry-tooltip.project": "Project",
+  "time.entry-tooltip.issue": "Issue",
+  "time.entry-tooltip.activity": "Деятельность",
+  "time.entry-tooltip.hours": "Часы",
   "time.error.fail-to-load-data": "Не удалось загрузить данные",
 
   "settings.general": "Основное",
@@ -86,21 +90,24 @@
   "settings.redmine.connection-successful": "Подключение успешно!",
   "settings.redmine.hello-user": "Здравствуйте <strong>{firstName} {lastName}</strong> ({accountName})",
   "settings.redmine.edit": "Edit",
-  "settings.options": "Дополнительно",
-  "settings.options.auto-pause-on-switch.title": "Авто остановка",
-  "settings.options.auto-pause-on-switch.description": "Автоматически останавливать таймеры при изменении задачи",
-  "settings.options.extended-search.title": "Расширенный поиск",
-  "settings.options.extended-search.description": "Разрешить поиск по задачам, которые не назначены на вас",
-  "settings.options.round-time-nearest-quarter-hour.title": "Округлять до ближайших 15 минут",
-  "settings.options.round-time-nearest-quarter-hour.description": "Округлять таймер до ближайших 15 минут",
-  "settings.options.add-spent-time-for-other-users.title": "Добавлять затраченное время для других пользователей",
-  "settings.options.add-spent-time-for-other-users.description": "(Требуются разрешения в Redmine)",
-  "settings.options.add-notes.title": "Add notes",
-  "settings.options.add-notes.description": "Adding notes to an issue",
-  "settings.options.cache-comments.title": "Cache comments",
-  "settings.options.cache-comments.description": "Cache comments until they are submitted",
+  "settings.features": "Дополнительно",
+  "settings.features.auto-pause-on-switch.title": "Авто остановка",
+  "settings.features.auto-pause-on-switch.description": "Автоматически останавливать таймеры при изменении задачи",
+  "settings.features.extended-search.title": "Расширенный поиск",
+  "settings.features.extended-search.description": "Разрешить поиск по задачам, которые не назначены на вас",
+  "settings.features.round-time-nearest-quarter-hour.title": "Округлять до ближайших 15 минут",
+  "settings.features.round-time-nearest-quarter-hour.description": "Округлять таймер до ближайших 15 минут",
+  "settings.features.add-spent-time-for-other-users.title": "Добавлять затраченное время для других пользователей",
+  "settings.features.add-spent-time-for-other-users.description": "(Требуются разрешения в Redmine)",
+  "settings.features.add-notes.title": "Add notes",
+  "settings.features.add-notes.description": "Adding notes to an issue",
+  "settings.features.cache-comments.title": "Cache comments",
+  "settings.features.cache-comments.description": "Cache comments until they are submitted",
   "settings.style": "Styling",
   "settings.style.group-issues-by-version.title": "Group issues by target version",
+  "settings.style.show-issues-priority.title": "Show issues priority",
+  "settings.style.sort-issues-by-priority.title": "Sort issues by priority",
+  "settings.style.show-tooltips.title": "Show tooltips",
   "settings.save-settings": "Сохранить настройки",
   "settings.settings-saved": "Настройки сохранены!",
   "settings.info.version": "Версия: {version}",
