--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -66,6 +66,10 @@
   "issues.modal.save-changes.save": "Yes, Save",
   "issues.error.fail-to-load-issues": "Failed to load issues",
 
+  "time.entry-tooltip.project": "Project",
+  "time.entry-tooltip.issue": "Issue",
+  "time.entry-tooltip.activity": "Activity",
+  "time.entry-tooltip.hours": "Hours",
   "time.error.fail-to-load-data": "Failed to load data",
 
   "settings.general": "General",
@@ -86,21 +90,24 @@
   "settings.redmine.connection-successful": "Connection successful!",
   "settings.redmine.hello-user": "Hello <strong>{firstName} {lastName}</strong> ({accountName})",
   "settings.redmine.edit": "Edit",
-  "settings.options": "Options",
-  "settings.options.auto-pause-on-switch.title": "Auto pause",
-  "settings.options.auto-pause-on-switch.description": "Automatic pause timers when changing issue",
-  "settings.options.extended-search.title": "Extended search",
-  "settings.options.extended-search.description": "Allows to search issues that are not assigned to you",
-  "settings.options.round-time-nearest-quarter-hour.title": "Round to nearest 15 min",
-  "settings.options.round-time-nearest-quarter-hour.description": "Round timer to nearest quarter hour",
-  "settings.options.add-spent-time-for-other-users.title": "Add spent time for other users",
-  "settings.options.add-spent-time-for-other-users.description": "(Redmine permission required)",
-  "settings.options.add-notes.title": "Add notes",
-  "settings.options.add-notes.description": "Adding notes to an issue",
-  "settings.options.cache-comments.title": "Cache comments",
-  "settings.options.cache-comments.description": "Cache comments until they are submitted",
+  "settings.features": "Features",
+  "settings.features.auto-pause-on-switch.title": "Auto pause",
+  "settings.features.auto-pause-on-switch.description": "Automatic pause timers when changing issue",
+  "settings.features.extended-search.title": "Extended search",
+  "settings.features.extended-search.description": "Allows to search issues that are not assigned to you",
+  "settings.features.round-time-nearest-quarter-hour.title": "Round to nearest 15 min",
+  "settings.features.round-time-nearest-quarter-hour.description": "Round timer to nearest quarter hour",
+  "settings.features.add-spent-time-for-other-users.title": "Add spent time for other users",
+  "settings.features.add-spent-time-for-other-users.description": "(Redmine permission required)",
+  "settings.features.add-notes.title": "Add notes",
+  "settings.features.add-notes.description": "Adding notes to an issue",
+  "settings.features.cache-comments.title": "Cache comments",
+  "settings.features.cache-comments.description": "Cache comments until they are submitted",
   "settings.style": "Styling",
   "settings.style.group-issues-by-version.title": "Group issues by target version",
+  "settings.style.show-issues-priority.title": "Show issues priority",
+  "settings.style.sort-issues-by-priority.title": "Sort issues by priority",
+  "settings.style.show-tooltips.title": "Show tooltips",
   "settings.save-settings": "Save settings",
   "settings.settings-saved": "Settings saved!",
   "settings.info.version": "Version: {version}",
