--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -104,6 +104,7 @@
   "settings.features.cache-comments.title": "Cache comments",
   "settings.features.cache-comments.description": "Cache comments until they are submitted",
   "settings.style": "Styling",
+  "settings.style.sticky-scroll.title": "Sticky scroll",
   "settings.style.group-issues-by-version.title": "Group issues by target version",
   "settings.style.show-issues-priority.title": "Show issues priority",
   "settings.style.sort-issues-by-priority.title": "Sort issues by priority",
