feat: Copy issue id to clipboard

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -14,6 +14,7 @@
   "issues.filter.hide-completed-issues.description": "100% erledigt, aber weiterhin offen",
   "issues.list.no-issues": "Keine Tickets",
   "issues.context-menu.open-in-redmine": "In Redmine öffnen",
+  "issues.context-menu.copy-id-to-clipboard": "In Zwischenablage kopieren",
   "issues.context-menu.timer.start": "Timer starten",
   "issues.context-menu.timer.pause": "Timer pausieren",
   "issues.context-menu.timer.stop": "Timer beenden",
@@ -23,6 +24,7 @@
   "issues.context-menu.remember": "Ticket merken",
   "issues.context-menu.forgot": "Ticket vergessen",
   "issues.context-menu.pin-and-remember": "Ticket anheften und merken",
+  "issues.id-copied-to-clipboard": "'#{issueId}' in Zwischenablage kopieren",
   "issues.issue.pinned": "Ticket is oben angeheftet",
   "issues.issue.not-assigned-to-me": "Ticket ist Ihnen nicht zugewiesen",
   "issues.action.toggle-timer.tooltip": "Wenn ausgewählt, <KBD>Strg</KBD> + <KBD>Leertaste</KBD> drücken, um Timer umzuschalten",
