--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -14,6 +14,7 @@
   "issues.filter.hide-completed-issues.description": "100% done, but still open",
   "issues.list.no-issues": "No issues",
   "issues.context-menu.open-in-redmine": "Open in Redmine",
+  "issues.context-menu.copy-id-to-clipboard": "Copy to clipboard",
   "issues.context-menu.timer.start": "Start timer",
   "issues.context-menu.timer.pause": "Pause timer",
   "issues.context-menu.timer.stop": "Stop timer",
@@ -23,6 +24,7 @@
   "issues.context-menu.remember": "Remember issue",
   "issues.context-menu.forgot": "Forget issue",
   "issues.context-menu.pin-and-remember": "Pin and remember issue",
+  "issues.id-copied-to-clipboard": "'#{issueId}' copied to clipboard",
   "issues.issue.pinned": "Issue is pinned at the top",
   "issues.issue.not-assigned-to-me": "Issue is not assigned to you",
   "issues.action.toggle-timer.tooltip": "If selected, press <KBD>Ctrl</KBD> + <KBD>Spacebar</KBD> to toggle timer",
