--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -14,6 +14,7 @@
   "issues.filter.hide-completed-issues.description": "Готовность 100%, но еще открыты",
   "issues.list.no-issues": "Нет задач",
   "issues.context-menu.open-in-redmine": "Открыть в Redmine",
+  "issues.context-menu.copy-id-to-clipboard": "Copy to clipboard",
   "issues.context-menu.timer.start": "Запустить таймер",
   "issues.context-menu.timer.pause": "Остановить таймер",
   "issues.context-menu.timer.stop": "Сбросить таймер",
@@ -23,6 +24,7 @@
   "issues.context-menu.remember": "Запомнить задачу",
   "issues.context-menu.forgot": "Забыть задачу",
   "issues.context-menu.pin-and-remember": "Закрепить и запомнить задачу",
+  "issues.id-copied-to-clipboard": "'#{issueId}' copied to clipboard",
   "issues.issue.pinned": "Задача закреплена наверху",
   "issues.issue.not-assigned-to-me": "Задача не назначена вам",
   "issues.action.toggle-timer.tooltip": "Если выбрано, то <KBD>Ctrl</KBD> + <KBD>Пробел</KBD> запускает/останавливает таймер",
