--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -111,6 +111,7 @@
   "settings.style.show-issues-priority.title": "Show issues priority",
   "settings.style.sort-issues-by-priority.title": "Sort issues by priority",
   "settings.style.show-tooltips.title": "Show tooltips",
+  "settings.style.time-format.title": "Time span format",
   "settings.save-settings": "Save settings",
   "settings.settings-saved": "Settings saved!",
   "settings.info.version": "Version: {version}",
